--- a/client/src/styles/pages/_blogpost-view.scss
+++ b/client/src/styles/pages/_blogpost-view.scss
@@ -99,6 +99,16 @@
     .media + .media {
         border-top: 1px solid rgba(33, 33, 33, 0.2);
     }
+
+    .comment {
+        position: relative;
+
+        .delete {
+            position: absolute;
+            right: 0.5rem;
+            top: 0.5rem;
+        }
+    }
 }
 
 #load-more-comments {
