--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -6035,6 +6035,12 @@ a.navbar-link.is-active {
     margin-bottom: 0.75rem; }
   #comments .media + .media {
     border-top: 1px solid rgba(33, 33, 33, 0.2); }
+  #comments .comment {
+    position: relative; }
+    #comments .comment .delete {
+      position: absolute;
+      right: 0.5rem;
+      top: 0.5rem; }
 
 #load-more-comments {
   margin-bottom: 1rem; }
