--- a/server/modules/blog/views/view.pug
+++ b/server/modules/blog/views/view.pug
@@ -32,7 +32,7 @@ block content
                                 article(id='comment-' + item.id, class="media comment")
                                     .media-content
                                         .content
-                                            p <strong>#{item.name}</strong> <small>wrote #{item.createdOnFormatted}</small><br>#{item.comment}
+                                            p <strong>!{item.website ? `<a href="${item.website}" class="tag" target="_blank">${item.name}</a>` : item.name}</strong> <small>wrote #{item.createdOnFormatted}</small><br>#{item.comment}
                                             <button class="delete" data-comment-id="#{item.id}"></button>
 
                         #comment-form
