--- a/client/src/styles/pages/_home.scss
+++ b/client/src/styles/pages/_home.scss
@@ -1,20 +1,9 @@
 #home {
-    ul.blog-posts {
-        list-style: none;
-        padding-top:1.5rem;
-
-        li {
-            margin-bottom:3rem;
+    .posts {
+        img {
+            position: absolute;
+            transform: translateY(-50%);
+            top: 50%;
         }
-
-        .post-info {
-            padding-left:15px;
-        }
-
-    }
-
-    .info-no-posts {
-        margin:30px 0;
-        text-align:center;
     }
 }
