--- a/client/src/styles/pages/_admin-index.scss
+++ b/client/src/styles/pages/_admin-index.scss
@@ -1,30 +1,15 @@
 #admin-index {
-    .btn-bar {
-        margin-bottom: 6px;
-        text-align: right;
-    }
+    .img-preview {
+        flex-basis: 200px;
 
-    table {
-        width: 100%;
-
-        th:last-child {
-            width: 155px;
+        .o-ratio {
+            flex: 1;
         }
-    }
 
-    ul.actions{
-        list-style:none;
-        margin:0;
-        padding:0;
-
-        li {
-            display:inline-block;
-            margin:7px;
+        img {
+            position: absolute;
+            transform: translateY(-50%);
+            top: 50%;
         }
-    }
-
-    .info-no-posts {
-        margin:30px 0;
-        text-align:center;
     }
 }
