--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -6067,6 +6067,10 @@ a.navbar-link.is-active {
 .editor-toolbar svg {
   margin-right: 12px; }
 
+.CodeMirror .CodeMirror-placeholder,
+.CodeMirror .content pre:not(:last-child) {
+  margin-bottom: 0 !important; }
+
 #home .posts img {
   position: absolute;
   -webkit-transform: translateY(-50%);
