fix: disable cache in listing Admin

--- a/server/modules/blog/views/index.pug
+++ b/server/modules/blog/views/index.pug
@@ -8,7 +8,7 @@ block content
         .hero-body
             .container
                 p.title Google Datastore demo
-                p.subtitle A blog in Node.js with @google/datastore & gstore-node
+                p.subtitle Blog application in Node.js with @google/datastore & gstore-node
     .container
         .content
             section(class="section posts")
