--- a/client/src/styles/pages/_home.scss
+++ b/client/src/styles/pages/_home.scss
@@ -4,6 +4,7 @@
             position: absolute;
             transform: translateY(-50%);
             top: 50%;
+            width: 100%;
         }
     }
 }
