--- a/server/views/404.pug
+++ b/server/views/404.pug
@@ -1,7 +1,7 @@
 extends layout.pug
 
 block title
-    title= "404 Not found"
+    title= "404 Page Not found"
 
 block content
     section(class="hero is-danger is-large")
