--- a/client/src/styles/pages/_admin-index.scss
+++ b/client/src/styles/pages/_admin-index.scss
@@ -1,4 +1,17 @@
 #admin-index {
+    .level-right {
+        a {
+            position: relative;
+        }
+        .level-item:last-child {
+            i {
+                position: absolute;
+                right: -21px;
+                top: 4px;
+            }
+        }
+    }
+
     .img-preview {
         flex-basis: 200px;
 
