--- a/server/modules/blog/views/detail.pug
+++ b/server/modules/blog/views/detail.pug
@@ -1,26 +1,26 @@
 extends ../../../views/layout.pug
 
 block title
-    title= blogPost ? blogPost.title : ""
+    title= post ? post.title : ""
 
 block content
     if error
         div(class="notification is-danger")= error.message
 
-    if blogPost
+    if post
         section(class="hero is-dark is-large")
-            if blogPost.posterUri
+            if post.posterUri
                 style.
                     .header-image:before{
-                        background-image:url(#{blogPost.posterUri})
+                        background-image:url(#{post.posterUri})
                     }
             div(class="hero-body header-image")
                 div(class="container has-text-centered")
-                    h1.title= blogPost.title
+                    h1.title= post.title
 
         .container
             .content
-                section.section!= blogPost.contentHtml
+                section.section!= post.contentToHtml
 
         section(class="hero is-light")
             div(class="hero-body is-paddingless")
@@ -28,24 +28,17 @@ block content
                     section(id="comments" class="section")
                         h3.is-size-4 Conversation
                         #comments-wrapper
-                            each item in comments.entities
-                                article(id='comment-' + item.id, class="media comment")
-                                    .media-content
-                                        .content
-                                            p <strong>!{item.website ? `<a href="${item.website}" class="tag" target="_blank">${item.name}</a>` : item.name}</strong> <small>wrote #{item.createdOnFormatted}</small><br>#{item.comment}
-                                            <button class="delete" data-comment-id="#{item.id}"></button>
 
                         #comment-form
-                            if comments.nextPageCursor
-                                div(id="load-more-comments" class="has-text-right")
-                                    button(class="button is-link is-small") See more comments
+                            div(id="load-more-comments" class="has-text-right")
+                                button(class="button is-link is-small is-hidden") See more comments
 
                             div(id="comment-form-errors" class="notification is-danger is-hidden")
 
                             article.media
                                 .media-content
                                     .content
-                                        form(method="post", id="form-comment" data-post-id=blogPost.id)
+                                        form(method="post", id="form-comment" data-post-id=post.id)
                                             .field
                                                 .control
                                                     input(class="input", type="text", placeholder="Your name" name="author")
@@ -62,9 +55,8 @@ block content
                                                     button(type="submit", class="button") Post comment
 
 block scripts
-    if blogPost
+    if post
         script.
             window.__blogPostData = {
-                id: #{blogPost.id},
-                nextPage: '#{comments.nextPageCursor}'
+                id: #{post.id},
             };
