--- a/server/views/includes/head.pug
+++ b/server/views/includes/head.pug
@@ -2,7 +2,7 @@ meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 
 block title
-    title Blog
+    title My Blog
 
 meta(name='viewport', content='width=device-width, initial-scale=1')
 
